--- a/src/customizations/header-user-area/_header-user-area.scss
+++ b/src/customizations/header-user-area/_header-user-area.scss
@@ -71,7 +71,11 @@
 
     &__badge {
         display: block;
-        left: 65%;
+        left: 55%;
         z-index: 2;
+
+        @include media('>=laptop') {
+            left: 65%;
+        }
     }
 }
